--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,12 @@
 }
 
 .App {
-  background-color: gray;
+  background-color: #9190f9;
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  
 }
