--- a/src/Components/Pomodoro/Pomodoro.css
+++ b/src/Components/Pomodoro/Pomodoro.css
@@ -46,7 +46,7 @@
     font-family: 'Bungee', sans-serif;
     color: #fff;
     font-size: 2rem;
-    Letter-spacing: 1rem;
+    letter-spacing: 1rem;
     padding: 1rem .5rem;
     box-shadow: inset 5px 5px 11px #353546,
                 inset -5px -5px 11px #4f4f68;
